css/default.css
body {
    background: url('http://www.wagamama.com/~/media/WagamamaMainsite/hero-pod-images/omakase.jpg') no-repeat;
    color: #fff;
}

.navbar-text {
    margin: 15px;
    font-size: 1.3em;
}

.wrapper, table {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    background: #fff;
    width: 60%;
    padding: 20px;
}

.colHeading {
    font-weight: bold;
}

h4 {
    margin-top: 100px;
}

h2 {
    margin-top: 10px;
}

/* BOOTSTRAP OVERRIDDEN STYLES */
.navbar-default {
    background-color: #fff;
    border: none;
}

.navbar-default .navbar-brand,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:hover {
    color: #000;
}

.navbar-brand {
    font-size: 30px;
}

.navbar-default .navbar-toggle {
    border: none;
    background: #000;
}

.navbar-toggle {
    border-radius: 0;
}

.navbar-default .navbar-toggle:focus,
.navbar-default .navbar-toggle:hover {
    background-color: #000;
    /* MAKE LINES CHANGE COLOR */
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #000;
}

.navbar-toggle .icon-bar {
    border-radius: 0;
}

.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
    border-color: #000;
}

.navbar-default {
    color: #000;
}

.navbar-default .navbar-text {
    color: #000;
}

